--- a/online_collaboration/index.html
+++ b/online_collaboration/index.html
@@ -23,8 +23,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link href="./assets/css/app.css" rel="stylesheet" />
 
-    <style>i.icon-blue {
-    color:  teal darken-4;
+    <style>.f-icon {
+    color:  orange accent-2;
+}
+
+r-icon{
+    padding-top: 6px;
+}
+
+r-btn{
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.f-icon{
+    padding-top: 13px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .left-padding{
@@ -158,7 +174,7 @@ Max-Width: Refers to everything less than or equal to the amount given.
                         <ul>
                             <li><a href="#!"><i class="material-icons">send</i>View Profile</a></li>
                             <li><a href="#!"><i class="material-icons">send</i>Update Profile</a></li>
-                            <li><a href="#!"><i class="material-icons">send</i>Logout</a></li>
+                            <li><a href="#!" ng-click="logout()"><i class="material-icons">send</i>Logout</a></li>
                         </ul>
                     </div>
                 </li>
@@ -181,7 +197,8 @@ Max-Width: Refers to everything less than or equal to the amount given.
                         <ul>
                             <li><a href="#!/viewForums"><i class="material-icons">send</i>View Forums</a></li>
                             <li><a href="#!/admin/createForum" ng-if="user.role == 'ADMIN'"><i class="material-icons">send</i>Create Forum</a></li>
-                            <li><a href="#!"><i class="material-icons">send</i>My Forums</a></li>
+                            <li><a href="#!/admin/myForums" ng-if="user.role == 'ADMIN'"><i class="material-icons">send</i>My Forums</a></li>
+                            <li><a href="#!/user/myForums" ng-if="user.role == 'USER'"><i class="material-icons">send</i>My Forums</a></li>
                         </ul>
                     </div>
                 </li>
