--- a/online_collaboration/index.html
+++ b/online_collaboration/index.html
@@ -93,6 +93,96 @@ Max-Width: Refers to everything less than or equal to the amount given.
 	margin-top: 64px;
 }
 
+input[type=text] {
+  width: 100%;
+  border: solid 1px #D4D4D1;
+  transition: .7s;
+  font-size: 1.1em;
+  padding: 0.3em;
+  margin: 0.2em 0;
+}
+
+input[type=text]:focus {
+  -webkit-box-shadow: 0 0 5px 0 rgba(69, 155, 231, .75);
+  -moz-box-shadow: 0 0 5px 0 rgba(69, 155, 231, .75);
+  box-shadow: 0 0 5px 0 rgba(69, 155, 231, .75);
+  border-color: #459be7;
+  outline: none;
+}
+
+.info {
+  float: right;
+}
+
+form:after {
+  display: block;
+  content: '';
+  clear: both;
+}
+
+button {
+  background: #459be7;
+  color: #FFF;
+  font-weight: 600;
+  padding: .3em 1.9em;
+  border: none;
+  font-size: 1.2em;
+  margin: 0;
+  text-shadow: 0 0 5px rgba(0, 0, 0, .3);
+  cursor: pointer;
+  transition: .7s;
+}
+
+button:focus {
+  outline: none;
+}
+
+button:hover {
+  background: #1c82dd;
+}
+
+button:disabled {
+  background-color: #90BFE8;
+  cursor: not-allowed;
+}
+
+.count {
+  font-weight: 300;
+  font-size: 1.35em;
+  color: #CCC;
+  transition: .7s;
+}
+
+.count.danger {
+  color: #a94442;
+  font-weight: 600;
+}
+
+.message time {
+  width: 80px;
+  color: #999;
+  display: block;
+  float: left;
+}
+
+.message {
+  margin: 0;
+}
+
+.message .self {
+  font-weight: 600;
+}
+
+.message span {
+  width: calc(100% - 80px);
+  display: block;
+  float: left;
+  padding-left: 20px;
+  border-left: solid 1px #F1F1F1;
+  padding-bottom: .5em;
+}
+
+
 </style>
 
 
@@ -103,6 +193,9 @@ Max-Width: Refers to everything less than or equal to the amount given.
 <script type="text/javascript" src="assets/libs/angular/angular.js"></script>
 <script type="text/javascript" src="assets/libs/angular/angular-route.js"></script>
 <script type="text/javascript" src="assets/libs/angular/angular-cookies.js"></script>
+<script type="text/javascript" src="assets/libs/angular/sockjs.min.js"></script>
+<script type="text/javascript" src="assets/libs/angular/stomp.min.js"></script>
+<script type="text/javascript" src="assets/libs/angular/lodash.min.js"></script>
 <script type="text/javascript" src="app/app.module.js"></script>
 <script type="text/javascript" src="app/app.routes.js"></script>
 
@@ -137,6 +230,10 @@ Max-Width: Refers to everything less than or equal to the amount given.
 <!-- Loading the profile upload module -->
 <script src="app/components/upload/UploadFactory.js"></script>
 <script src="app/components/upload/UploadController.js"></script>
+
+<!-- Loading the profile upload module -->
+<script src="app/components/chat/ChatService.js"></script>
+<script src="app/components/chat/ChatController.js"></script>
 
 
 <script type="text/javascript" src="app/components/user/userFactory.js"></script>
